--- a/css/lesson-page.css
+++ b/css/lesson-page.css
@@ -20,7 +20,7 @@
     padding: 2rem;
     margin-bottom: 3rem;
     border-radius: 15px;
-    background-image: url(../images/header_background_blured3.webp);
+    background-image: url('/images/header_background_blured3.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
