--- a/css/lesson-page.css
+++ b/css/lesson-page.css
@@ -316,27 +316,29 @@ pre code {
     }
 
     .lesson-title-group h1 {
-        font-size: 2.2rem;
+        font-size: 3rem;
     }
     .lesson-title-group .lesson-intro {
-        font-size: 1.2rem;
+        font-size: 1.8rem;
     }
 
     .lesson-block h2 {
-        font-size: 1.7rem;
+        font-size: 2.2rem;
         padding-left: 1rem;
-        margin-bottom: 1.5rem;
+        margin-bottom: 3rem;
     }
 
     .lesson-block h3 {
-        font-size: 1.25rem;
+        font-size: 1.7rem;
+        padding: 1rem;
     }
 
     .lesson-block p,
     .lesson-block ul,
     .lesson-block ol {
-        font-size: 1.15rem;
+        font-size: 1.5rem;
         line-height: 1.6;
+        padding-bottom: 2rem;
     }
 
     .lesson-navigation {
